--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,35 +11,11 @@
 <% if @article.comments.any? %>
   <hr>
   <h2>Comments:</h2>
-  <% @article.comments.each do |comment| %>
-    <p>
-      <strong>Commenter:</strong>
-      <%= comment.commenter %>
-    </p>
-    <p>
-      <strong>Body:</strong>
-      <%= comment.body %>
-    </p>
-  <% end %>
+  <%= render partial: 'comments/comment', collection: @article.comments %>
+  <%#= render @article.comments %> <!-- this is a shortcut for the above line -->
 <% end %>
 
-
-<hr>
-
-<h2>Add a Comment:</h2>
-<%= form_for([@article, @article.comments.build]) do |f| %>
-  <p>
-    <%= f.label :commenter %>
-    <%= f.text_field :commenter, placeholder: 'Your name is?' %>
-  </p>
-  <p>
-    <%= f.label :body %>
-    <%= f.text_area :body, placeholder: 'And, your comment is?', cols: 40, rows: 7 %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <hr>
 <%= link_to 'back', articles_path %> | <%= link_to 'edit', edit_article_path(@article) %>
